<resources>
    <string name="app_name">SOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="informacion">Información</string>
    <string name="contactanos">Contáctanos</string>
    <string name="compartir">Compartir</string>
    <string name="ubicacion_automatica">Ubicación automática</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="compartir_app">Invitar a mis amigos a través de...</string>
    <string name="fullname">Nombres completos</string>
    <string name="dni">DNI</string>
    <string name="phone">Celular</string>
    <string name="address">Dirección</string>
    <string name="gender">Género :</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="termsandcondit">Al registrarme, acepto los Términos y Condiciones</string>
    <string name="register">Registrate</string>
    <string name="enter">Ingresar</string>
    <string name="recovery_pass">¿Olvidastes tu contraseña?</string>
    <string name="reset_password">Un mensaje de confirmación será enviado a tu correo electrónico con el cual te registrastes.</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="confirm_pass">Confirmar contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="send_to_login">¿Ya tienes una cuenta? ¡Inicia Sesión!</string>
    <string name="save_data">Guardar datos</string>
    <string name="todo">TODO</string>
    <string name="accepttermsandcondi">Debe aceptar nuestros términos y condiciones</string>
    <string name="fillthisfield">Por favor rellene este campo</string>
    <string name="yourpasscontent6">Su contraseña debe contener al menos 6 dígitos</string>
    <string name="creatingnewaccount">Creando su nueva cuenta</string>
    <string name="pleasewait">Por favor espere mientras se crea su nueva cuenta</string>
    <string name="therewaserror">Se produjo un error, por favor intentelo nuevamente</string>
    <string name="passdonotmatch">Las contraseñas no coinciden</string>
    <string name="logginin">Iniciando Sesión</string>
    <string name="pleasewaitlogginin">Por favor espere mientras inicia sesión</string>
    <string name="msjsend">Mensaje de recuperación enviado correctamente</string>
    <string name="sendmsjconf">Enviando mensaje de recuperación</string>
    <string name="sendmsjpw">Por favor espere mientras su mensaje se envía</string>
    <string name="emailinvalid">Correo electrónico no válido</string>
    <string name="entervaliddoc">Ingrese un docuento válido</string>
    <string name="entervalidphone">Ingrese un número válido</string>
    <string name="gender_selection">Seleccióne su género</string>
    <string name="save_your_data">Guardando sus datos</string>
    <string name="wait_save_yout_data">Por favor espere mientras se guardan sus datos...</string>
</resources>
