<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/mi_cuenta" />
        <item
            android:id="@+id/information"
            android:icon="@drawable/ic_information"
            android:title="@string/informacion" />
        <item
            android:id="@+id/contac_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contactanos" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/compartir" />
    </group>

    <group
        android:id="@+id/menu_bottt"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sw_location"
            android:title="@string/ubicacion_automatica"
            android:icon="@drawable/ic_my_location"
            app:actionLayout="@layout/switch_btn"/>
    </group>

    <group
        android:id="@+id/menu_bot_bot"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sing_off"
            android:icon="@drawable/ic_sing_off"
            android:title="@string/cerrar_sesion" />

    </group>

</menu>
