<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/diez"
            android:layout_marginRight="@dimen/diez"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/diez"
            android:paddingRight="@dimen/diez">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/options_nombres"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sesenta"
                android:layout_marginTop="@dimen/diez"
                android:background="@drawable/buton_login"
                android:gravity="center"
                android:paddingStart="@dimen/veinte"
                android:paddingLeft="@dimen/veinte">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_name"
                    android:drawableLeft="@drawable/ic_name"
                    android:drawablePadding="@dimen/diez"
                    android:hint="@string/fullname"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/options_dni"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sesenta"
                android:layout_marginTop="@dimen/diez"
                android:background="@drawable/buton_login"
                android:gravity="center"
                android:paddingStart="@dimen/veinte"
                android:paddingLeft="@dimen/veinte">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_dni"
                    android:drawableLeft="@drawable/ic_dni"
                    android:drawablePadding="@dimen/diez"
                    android:hint="@string/dni"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="8" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/options_celular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sesenta"
                android:layout_marginTop="@dimen/diez"
                android:background="@drawable/buton_login"
                android:gravity="center"
                android:paddingStart="@dimen/veinte"
                android:paddingLeft="@dimen/veinte">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="@dimen/diez"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="9" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/options_direccion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sesenta"
                android:layout_marginTop="@dimen/diez"
                android:background="@drawable/buton_login"
                android:gravity="center"
                android:paddingStart="@dimen/veinte"
                android:paddingLeft="@dimen/veinte">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_address"
                    android:drawableLeft="@drawable/ic_address"
                    android:drawablePadding="@dimen/diez"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/options_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sesenta"
                android:layout_marginTop="@dimen/diez"
                android:layout_marginBottom="@dimen/veinte"
                android:background="@drawable/buton_login"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

            <Button
                android:id="@+id/options_guardar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/ciensiete"
                android:layout_height="@dimen/sesenta"
                android:layout_marginTop="@dimen/veinte"
                android:layout_marginBottom="@dimen/treinta"
                android:text="@string/save_data" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>