<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/diez"
                android:src="@drawable/ic_logo"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/diez"
                android:layout_marginRight="@dimen/diez"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/diez"
                android:paddingRight="@dimen/diez">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cincuentaysiete"
                    android:layout_marginTop="@dimen/diez"
                    android:background="@drawable/buton_login">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/diez"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="@dimen/diez"
                        android:hint="@string/correo"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:layout_marginStart="@dimen/diez" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cincuentaysiete"
                    android:layout_marginTop="@dimen/diez"
                    android:background="@drawable/buton_login"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/diez"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_password"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="@dimen/diez"
                        android:hint="@string/contrasena"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:layout_marginStart="@dimen/diez" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cincuentaysiete"
                    android:layout_marginTop="@dimen/veinte"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/login_register"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="@dimen/cien"
                        android:layout_height="@dimen/sesenta"
                        android:layout_weight="1"
                        android:text="@string/register" />

                    <Button
                        android:id="@+id/login_enter"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="@dimen/cien"
                        android:layout_height="@dimen/sesenta"
                        android:layout_weight="1"
                        android:text="@string/enter" />
                </LinearLayout>

                <TextView
                    android:id="@+id/login_revocerypass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/cuarenta"
                    android:layout_marginBottom="@dimen/cuarenta"
                    android:text="@string/recovery_pass"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>