<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/diez"
            android:layout_marginRight="@dimen/diez"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/diez"
            android:paddingRight="@dimen/diez">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cincuentaysiete"
                android:layout_marginTop="@dimen/diez"
                android:background="@drawable/buton_login">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/diez"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/diez"
                    android:hint="@string/correo"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="@dimen/diez" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cincuentaysiete"
                android:layout_marginTop="@dimen/diez"
                android:background="@drawable/buton_login"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/diez"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/diez"
                    android:hint="@string/new_pass"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:layout_marginStart="@dimen/diez" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cincuentaysiete"
                android:layout_marginTop="@dimen/diez"
                android:background="@drawable/buton_login"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/diez"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/diez"
                    android:hint="@string/confirm_pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:layout_marginStart="@dimen/diez" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/diez"
                android:orientation="horizontal"
                android:paddingTop="@dimen/cinco"
                android:paddingBottom="@dimen/cinco">

                <CheckBox
                    android:id="@+id/register_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/register_termsandcondit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/termsandcondit" />
            </LinearLayout>

            <Button
                android:id="@+id/register_createaccount"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/ciensiete"
                android:layout_height="@dimen/sesenta"
                android:layout_marginTop="@dimen/veinte"
                android:text="@string/create_account" />

            <TextView
                android:id="@+id/register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/treinta"
                android:layout_marginBottom="@dimen/treinta"
                android:text="@string/send_to_login"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>